# analytics-agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/tracking_agent/: agent.py  config.py  logger.py  rag_corpus.py
src/tracking_agent/ingestion/: config.py  rag_corpus.py
src/tracking_agent/retrieval/: semantic_search_engine.py
src/tracking_agent/tools/: __init__.py  add_corpus.py  define_pattern.py  list_corpora.py  list_files.py  rag_query.py  utils.py
